# saferoute-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .versionrc  .versionrc.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATIONS.md  README.md  RUNBOOK.md  SECURITY.md  SECURITY_AUDIT.md  SETUP.md  TEST_REPORT.md  docker-compose.yml  fix_tests.py  migrate.py  migration_002_enhancements.sql  migration_003_encrypt_webhook_secrets.sql  migration_004_retention.sql  migration_005_rate_limiter_fix.sql  migration_006_webhook_logs_updated_at.sql  move_migrations.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schema.sql  security.txt  vercel-build.sh  vercel.json
app/: __init__.py  config.py  crypto.py  database.py  logging_config.py  main.py  models.py  monitoring.py
docs/: DOCUMENTATION_AUDIT.md  REVIEW-REPORT.md  deployment.md  migrations.md  runbook.md
frontend/: .gitignore  APPROACH.md  changelog.html  dashboard.html  index.html  login.html  package-lock.json  package.json  playwright.config.ts  terms.html  tsconfig.json  vite.config.ts
frontend-dist/: changelog.html  dashboard.html  index.html  login.html  privacy.html
load-tests/: README.md  saferoute-load-test.js
migrations/: 007_re_encrypt_webhook_secrets.sql  008_add_webhook_secrets.sql  009_optimize_rate_limiter.sql  010_add_form_validation_and_spam_shield.sql  011_add_spam_blocked_ips.sql  012_add_turnstile_support.sql  013_add_distributed_cache.sql  014_add_max_payload_bytes.sql  014_add_user_credits.sql  015_add_audit_logs.sql  015_add_payment_transactions.sql  016_add_signing_secret.sql  017_add_secret_rotation_checks.sql  018_add_circuit_breaker_state.sql  019_add_max_concurrent_deliveries.sql  020_add_max_concurrent_requests.sql  021_add_app_settings.sql  022_add_content_scan_rules.sql  README.md
public/: login.html
tests/: conftest.py  test_auth.py  test_cache.py  test_captcha.py  test_config.py  test_core.py  test_crypto.py  test_database.py  test_email.py  test_exchange_rates.py  test_ip_allowlist.py  test_logging_config.py  test_models.py  test_monitoring.py  test_payment_idempotency.py  test_payments.py  (+11 more)
(+82 files in other folders)
