[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saferoute-api"
version = "0.7.0"
description = "Form backend for static sites with validation, spam filtering, and webhook delivery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "SafeRoute", email = "deeprince2020@gmail.com"},
]
keywords = ["fastapi", "webhooks", "form-backend", "supabase"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
Homepage = "https://github.com/darestack/saferoute-api"
Repository = "https://github.com/darestack/saferoute-api"
Issues = "https://github.com/darestack/saferoute-api/issues"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

# The four modules below sit directly on the (untyped) Supabase client, whose
# query/execute results are inferred as arbitrary JSON (`Mapping[str, JSON]`).
# That boundary produces a flood of false-positive errors that we cannot fix
# without losing the dynamic query API. We therefore silence ONLY the codes
# that originate at that boundary, and keep all other strict checks enabled so
# genuine mistakes (e.g. undefined names, dead `# type: ignore`s) still fail
# the build. Prefer narrowing these further (typed wrappers around Supabase
# calls) over expanding this list.
[[tool.mypy.overrides]]
module = [
    "app.database",
    "app.routes.auth",
    "app.routes.oauth",
    "app.routes.proxy",
    "app.services.circuit_breaker",
    "app.services.route_cache",
    "app.services.retry_processor",
    "app.services.retention",
]
disable_error_code = [
    "union-attr",
    "arg-type",
    "index",
    "operator",
    "call-overload",
    "type-arg",
    "return-value",
    "assignment",
    "no-untyped-def",
]
